--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GSAP Example</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/gsap.min.js"></script>
     <script src="./index.js" defer></script>
   </head>
   <body>
     <div class="container">
+      <h1>Gsap.to()</h1>
       <div id="box" class="box">Click Me</div>
+    </div>
+    <hr>
+    <div class="container">
+      <h1>Stagger</h1>
+      <button id="stagger-button">Stagger</button>
+      <div id="stagger-container">
+        <div id="box" class="box stagger-box"></div>
+        <div id="box" class="box stagger-box"></div>
+        <div id="box" class="box stagger-box"></div>
+      </div>
     </div>
   </body>
 </html>
