added stagger reverse

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="container">
       <h1>Stagger</h1>
       <button id="stagger-button">Stagger</button>
+      <button id="stagger-reverse">Reverse Stagger</button>
       <div id="stagger-container">
         <div id="box" class="box stagger-box"></div>
         <div id="box" class="box stagger-box"></div>
